# CRM

./: .coverage  .coveragerc  .flake8  .gitignore  README.md  database.py  database_setup.py  epicevent.py  initial_user_creation.py  main.py  pyproject.toml  pytest.ini  token.txt
commands/: authentication.py  client.py  contract.py  event.py  user.py  usercommands.py
controllers/: authenticationcontroller.py  basecontroller.py
models/: base.py  client.py  contract.py  database.py  event.py  role.py  user.py
tests/: conftest.py  test_models.py
tests/commands/: test_authentication.py  test_client.py  test_contract.py  test_event.py  test_user.py
utils/: formatter.py  permission.py  validation.py
views/: authenticationview.py  baseview.py  clientview.py  contractview.py  eventview.py  userview.py
