[tool.poetry]
name = "crm"
version = "0.1.0"
description = ""
authors = ["cmareau-git <charles_mareau@hotmail.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.36"
argon2-cffi = "^23.1.0"
pyjwt = "^2.10.0"
pytest = "^8.3.3"
click = "^8.1.7"
rich = "^13.9.4"
flake8 = "^7.1.1"
coverage = "^7.6.8"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
sentry-sdk = "^2.19.0"
python-dotenv = "^1.0.1"
pytest-env = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
